* gcj-3.1-status.html: xscale-elf is ok.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-15  Tom Tromey  <tromey@redhat.com>
+
+	* gcj-3.1-status.html: xscale-elf is ok.
+
 2002-03-17  Andrea Bocci <fwyzard@inwind.it>
 
 	* faq.html: Converted to XHTML 1.0.
