* gcj-3.1-status.html: Updated rhug status, added Mauve.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-18  Tom Tromey  <tromey@redhat.com>
+
+	* gcj-3.1-status.html: Updated rhug status, added Mauve.
+
 2002-03-15  Tom Tromey  <tromey@redhat.com>
 
 	* gcj-3.1-status.html: xscale-elf is ok.
