--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,7 @@
 2002-03-18  Tom Tromey  <tromey@redhat.com>
 
+	* gcj-3.1-status.html: Test suite bug fixed.
+
 	* gcj-3.1-status.html: PR 5876 is fixed.
 
 	* gcj-3.1-status.html: Updated rhug status, added Mauve.
