--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-20  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* status.html: Update two links to GCC 2.95 releases and make some
+	links relative.
+
 2002-03-06  Phil Edwards  <pme@gcc.gnu.org>
 
 	* index.html:  Mention new snapshot.
