--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-20  Tom Tromey  <tromey@redhat.com>
+
+	* gcj-3.1-status.html: Mingw32 is ok.
+
 2002-03-19  Tom Tromey  <tromey@redhat.com>
 
 	* gcj-3.1-status.html: Added solaris2.6.  PR 5879 is fixed.
