--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-21  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* done.html: Update PAL entry.
+	* faq.html: Remove broken cprof link.
+
 2002-03-20  Tom Tromey  <tromey@redhat.com>
 
 	* gcj-3.1-status.html: Mingw32 is ok.
