* gcj-3.1-status.html: Added FreeBSD.  PR 5949 closed.  Updated 	Tru64 status.  PR 5948 closed.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-21  Tom Tromey  <tromey@redhat.com>
+
+	* gcj-3.1-status.html: Added FreeBSD.  PR 5949 closed.  Updated
+	Tru64 status.  PR 5948 closed.
+
 2002-03-21  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
 
 	* done.html: Update PAL entry.
