* gcj-3.1-status.html: x86 Solaris 2.8 is ok.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-23  Tom Tromey  <tromey@redhat.com>
+
+	* gcj-3.1-status.html: x86 Solaris 2.8 is ok.
+
 2002-03-21  Tom Tromey  <tromey@redhat.com>
 
 	* gcj-3.1-status.html: Added FreeBSD.  PR 5949 closed.  Updated
