* build-snapshot.html: Converted to XHTML 1.0. 	* compile.html: Likewise. 	* contrib.html: Likewise. 	* docs.html: Likewise. 	* download.html: Likewise. 	* index.html: Likewise. 	* port-files.html: Likewise. 	* port-signals.html: Likewise. 	* port-threads.html: Likewise. 	* projects.html: Likewise. 	* test.html: Likewise. 	* thanks.html: Likewise. 	* tm.html: Likewise.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,19 @@
+2002-03-24  Andrea Bocci <fwyzard@inwind.it>
+
+	* build-snapshot.html: Converted to XHTML 1.0.
+	* compile.html: Likewise.
+	* contrib.html: Likewise.
+	* docs.html: Likewise.
+	* download.html: Likewise.
+	* index.html: Likewise.
+	* port-files.html: Likewise.
+	* port-signals.html: Likewise.
+	* port-threads.html: Likewise.
+	* projects.html: Likewise.
+	* test.html: Likewise.
+	* thanks.html: Likewise.
+	* tm.html: Likewise.
+
 2002-03-23  Tom Tromey  <tromey@redhat.com>
 
 	* gcj-3.1-status.html: x86 Solaris 2.8 is ok.
