2002-03-2t  Andrea Bocci <fwyzard@inwind.it>
	* done.html: Converted to XHTML 1.0.
	* faq.html: Converted to XHTML 1.0.
	* gcj-3.1-status.html: Converted to XHTML 1.0.
	* gcj2.html: Converted to XHTML 1.0.
	* gdb.html: Converted to XHTML 1.0.
	* libgcj-classpath-compare.html: Converted to XHTML 1.0.
	* libgcj-platforms.html: Converted to XHTML 1.0.
	* libgcj2.html: Converted to XHTML 1.0.
	* merge-status.html: Converted to XHTML 1.0.
	* old-news.html: Converted to XHTML 1.0.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,16 @@
+2002-03-2t  Andrea Bocci <fwyzard@inwind.it>
+
+	* done.html: Converted to XHTML 1.0.
+	* faq.html: Converted to XHTML 1.0.
+	* gcj-3.1-status.html: Converted to XHTML 1.0.
+	* gcj2.html: Converted to XHTML 1.0.
+	* gdb.html: Converted to XHTML 1.0.
+	* libgcj-classpath-compare.html: Converted to XHTML 1.0.
+	* libgcj-platforms.html: Converted to XHTML 1.0.
+	* libgcj2.html: Converted to XHTML 1.0.
+	* merge-status.html: Converted to XHTML 1.0.
+	* old-news.html: Converted to XHTML 1.0.
+
 2002-03-24  Andrea Bocci <fwyzard@inwind.it>
 
 	* build-snapshot.html: Converted to XHTML 1.0.
