* gcj-3.1-status.html: Get PRs from gnats.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-25  Tom Tromey  <tromey@redhat.com>
+
+	* gcj-3.1-status.html: Get PRs from gnats.
+
 2002-03-2t  Andrea Bocci <fwyzard@inwind.it>
 
 	* done.html: Converted to XHTML 1.0.
