* gcj-3.1-status.html (i386-*-freebsed*): Now builds ok, but fails 	many tests.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,8 @@
 2002-03-25  Tom Tromey  <tromey@redhat.com>
 
+	* gcj-3.1-status.html (i386-*-freebsed*): Now builds ok, but fails
+	many tests.
+
 	* gcj-3.1-status.html: Get PRs from gnats.
 
 2002-03-2t  Andrea Bocci <fwyzard@inwind.it>
