* index.html: Mention mingw32 port.
	* gcj-3.1-status.html (ia64-*-linux-gnu): Now ok.
	(alpha-dec-osf5.1): Updated status; linked to test results.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,10 @@
+2002-03-26  Tom Tromey  <tromey@redhat.com>
+
+	* index.html: Mention mingw32 port.
+
+	* gcj-3.1-status.html (ia64-*-linux-gnu): Now ok.
+	(alpha-dec-osf5.1): Updated status; linked to test results.
+
 2002-03-25  Tom Tromey  <tromey@redhat.com>
 
 	* gcj-3.1-status.html (i386-*-freebsed*): Now builds ok, but fails
