--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-27  Tom Tromey  <tromey@redhat.com>
+
+	* gcj-3.1-status.html (alpha-dec-osf4.0f): Ok.
+	(alpha-dec-osf5.1): Ok.
+
 2002-03-26  Tom Tromey  <tromey@redhat.com>
 
 	* index.html: Mention mingw32 port.
