* gcj-3.1-status.html (i386-*-freebsd*): Ok. 	(sun-sparc-solaris2.8): Two PRs unfixed. 	(alpha-dec-osf5.1): Build failure.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,9 @@
+2002-04-08  Tom Tromey  <tromey@redhat.com>
+
+	* gcj-3.1-status.html (i386-*-freebsd*): Ok.
+	(sun-sparc-solaris2.8): Two PRs unfixed.
+	(alpha-dec-osf5.1): Build failure.
+
 2002-03-27  Tom Tromey  <tromey@redhat.com>
 
 	* gcj-3.1-status.html (alpha-dec-osf4.0f): Ok.
