--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-04-09  Tom Tromey  <tromey@redhat.com>
+
+	* gcj-3.1-status.html (xscale-elf): HTML fix.
+
 2002-04-08  Tom Tromey  <tromey@redhat.com>
 
 	* gcj-3.1-status.html (i386-*-freebsd*): Ok.
