2002-04-19  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
	* status.html: Fix link to GCC 2.95.

--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,3 +1,7 @@
+2002-04-19  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* status.html: Fix link to GCC 2.95.
+
 2002-03-20  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* status.html: Update two links to GCC 2.95 releases and make some
