* old-news.html (happening): Update link to Classpath.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-04-19  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* old-news.html (happening): Update link to Classpath.
+
 2002-04-16  Tom Tromey  <tromey@redhat.com>
 
 	* gcj-3.1-status.html (alpha-dec-osf5.1): Ok.
