* gcj-3.1-status.html (sparc-sun-solaris2.8): Ok. 	(sparc-sun-solaris2.7): Added.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-04-19  Tom Tromey  <tromey@redhat.com>
+
+	* gcj-3.1-status.html (sparc-sun-solaris2.8): Ok.
+	(sparc-sun-solaris2.7): Added.
+
 2002-04-19  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* old-news.html (happening): Update link to Classpath.
