--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,7 @@
 2002-04-19  Tom Tromey  <tromey@redhat.com>
 
+	* index.html: Changed -R to --resource.
+
 	* gcj-3.1-status.html (sparc-sun-solaris2.8): Ok.
 	(sparc-sun-solaris2.7): Added.
 
