--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-04-23  Tom Tromey  <tromey@redhat.com>
+
+	* gcj-3.1-status.html (Classpath, Mauve): Updated status
+
 2002-04-19  Tom Tromey  <tromey@redhat.com>
 
 	* index.html: Changed -R to --resource.
