2002-05-01  Phil Edwards  <pme@gcc.gnu.org>
	* index.html:  Add comment for 3.1
	* thanks.html:  Tweaks to HTML, more people.

--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,3 +1,8 @@
+2002-05-01  Phil Edwards  <pme@gcc.gnu.org>
+
+	* index.html:  Add comment for 3.1
+	* thanks.html:  Tweaks to HTML, more people.
+
 2002-04-19  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* status.html: Fix link to GCC 2.95.
