--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,7 @@
 2002-06-11  Tom Tromey  <tromey@redhat.com>
 
+	* libgcj-classpath-compare.html: Rebuilt.
+
 	* index.html: Mention assert checkin.
 
 2002-05-09  Tom Tromey  <tromey@redhat.com>
