* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -2,6 +2,8 @@
 
 	* libgcj-classpath-compare.html: Rebuilt.
 
+	* libgcj-classpath-compare.html: Rebuilt.
+
 2002-06-13  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
