--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-24  Tom Tromey  <tromey@redhat.com>
+
+	* index.html: Mention direct threading patch.
+
 2002-06-18  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
