--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-06-29  T.J. Mather  <tjmather@maxmind.com>
+
+	* docs.html: Added link to GCC GCJ Manual.
+	* faq.html: Updated link to Invocation section in GCJ Manual.
+
 2002-06-24  Tom Tromey  <tromey@redhat.com>
 
 	* index.html: Mention direct threading patch.
