2002-07-08  Phil Edwards  <pme@gcc.gnu.org>
	* download.html, footer.ihtml, header.ihtml:  Removed files.
	* index.html, status.html, thanks.html:  Update to match.

--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-08  Phil Edwards  <pme@gcc.gnu.org>
+
+	* download.html, footer.ihtml, header.ihtml:  Removed files.
+	* index.html, status.html, thanks.html:  Update to match.
+
 2002-05-01  Phil Edwards  <pme@gcc.gnu.org>
 
 	* index.html:  Add comment for 3.1
