* libgcj-classpath-compare.html: Rebuilt. 	* scripts/gen-classpath-compare: Also compare gnu.java.security, 	javax.naming, javax.transaction, and javax.sql.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,9 @@
+2002-07-14  Tom Tromey  <tromey@redhat.com>
+
+	* libgcj-classpath-compare.html: Rebuilt.
+	* scripts/gen-classpath-compare: Also compare gnu.java.security,
+	javax.naming, javax.transaction, and javax.sql.
+
 2002-06-29  T.J. Mather  <tjmather@maxmind.com>
 
 	* docs.html: Added link to GCC GCJ Manual.
