--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-15  Tom Tromey  <tromey@redhat.com>
+
+	* libgcj-classpath-compare.html: Rebuilt.
+
 2002-07-14  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
