2002-07-15  Phil Edwards  <pme@gcc.gnu.org>
	* index.html:  Add "#download" anchor.

--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-15  Phil Edwards  <pme@gcc.gnu.org>
+
+	* index.html:  Add "#download" anchor.
+
 2002-07-08  Phil Edwards  <pme@gcc.gnu.org>
 
 	* download.html, footer.ihtml, header.ihtml:  Removed files.
