--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,4 +1,10 @@
+2002-07-26  Tom Tromey  <tromey@redhat.com>
+
+	* libgcj-classpath-compare.html: Rebuilt.
+
 2002-07-15  Tom Tromey  <tromey@redhat.com>
+
+	* scripts/gen-classpath-compare: Compare gnu.java.rmi.
 
 	* libgcj-classpath-compare.html: Rebuilt.
 
