--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,7 @@
 2002-08-21  Tom Tromey  <tromey@redhat.com>
 
+	* index.html: Mention inliner.
+
 	* libgcj-classpath-compare.html: Rebuilt.
 
 2002-08-12  Tom Tromey  <tromey@redhat.com>
