--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-22  Tom Tromey  <tromey@redhat.com>
+
+	* index.html: HTML fixlets.
+
 2002-08-21  Tom Tromey  <tromey@redhat.com>
 
 	* index.html: Mention inliner.
