--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-29  Anthony Green  <green@redhat.com>
+
+	* index.html: Add Proxy news item.
+
 2002-08-22  Tom Tromey  <tromey@redhat.com>
 
 	* index.html: HTML fixlets.
