--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,7 @@
 2002-09-30  Tom Tromey  <tromey@redhat.com>
 
+	* libgcj-classpath-compare.html: Rebuilt.
+
 	* index.html: Add s390 news item.
 
 2002-09-29  Anthony Green  <green@redhat.com>
