--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-27  Jeff Sturm  <jsturm@one-point.com>
+
+	* status.html: Fixed typos.
+
 2002-10-02  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
