* status.html: Update Solaris info, use consistent naming for SPARC, Alpha.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,10 @@
 2002-10-27  Jeff Sturm  <jsturm@one-point.com>
 
+	* status.html: Update Solaris info, use consistent naming
+	for SPARC, Alpha.
+
+2002-10-27  Jeff Sturm  <jsturm@one-point.com>
+
 	* status.html: Fixed typos.
 
 2002-10-02  Tom Tromey  <tromey@redhat.com>
