* contrib.html: Do not use <GCJNAV> any longer. 	* docs.html: Ditto. 	* projects.html: Ditto. 	* faq.html: Ditto. 	* index.html: Ditto. 	* status.html: Ditto. 	* test.html: Ditto. 	* thanks.html: Ditto. 	* tm.html: Ditto (and add a <p> environment).
	* faq.html: Do not set bgcolor for the <body> and remove
	extraneous <br />s.
	* projects.html: Ditto.

	* compile.html: Use <h1> for the top-most heading.
	* faq-portugese.html: Ditto.  Also remove DOCTYPE and <meta> tags.

	* gcj-3.1-status.html: Update <title> and <h1>; avoid setting
	bgcolor for the <body>.

	* libgcj-platforms.html: Do not use align="center" for <h1>.

	* libgcj2.html: Remove a link back to the main page.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,29 @@
+2002-10-31  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* contrib.html: Do not use <GCJNAV> any longer.
+	* docs.html: Ditto.
+	* projects.html: Ditto.
+	* faq.html: Ditto.
+	* index.html: Ditto.
+	* status.html: Ditto.
+	* test.html: Ditto.
+	* thanks.html: Ditto.
+	* tm.html: Ditto (and add a <p> environment).
+
+	* faq.html: Do not set bgcolor for the <body> and remove
+	extraneous <br />s.
+	* projects.html: Ditto.
+	
+	* compile.html: Use <h1> for the top-most heading.
+	* faq-portugese.html: Ditto.  Also remove DOCTYPE and <meta> tags.
+
+	* gcj-3.1-status.html: Update <title> and <h1>; avoid setting
+	bgcolor for the <body>.
+	
+	* libgcj-platforms.html: Do not use align="center" for <h1>.
+	
+	* libgcj2.html: Remove a link back to the main page.
+		
 2002-10-27  Jeff Sturm  <jsturm@one-point.com>
 
 	* status.html: Update Solaris info, use consistent naming
