* status.html: Update target triples.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-11-02  Jeff Sturm  <jsturm@one-point.com>
+
+	* status.html: Update target triples.
+
 2002-10-31  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* contrib.html: Do not use <GCJNAV> any longer.
