* status.html: Wrapped paragraph in <p>.  Mention some programs we 	provide. 	(java.nio, javax.naming, javax.transaction, java.text): Updated. 	Link to comparison pages.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,10 @@
 2002-11-03  Tom Tromey  <tromey@redhat.com>
 
+	* status.html: Wrapped paragraph in <p>.  Mention some programs we
+	provide.
+	(java.nio, javax.naming, javax.transaction, java.text): Updated.
+	Link to comparison pages.
+
 	* libgcj-classpath-compare.html: Rebuilt.
 
 2002-11-02  Jeff Sturm  <jsturm@one-point.com>
