* status.html: Use <code>.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,7 @@
 2002-11-03  Tom Tromey  <tromey@redhat.com>
 
+	* status.html: Use <code>.
+
 	* status.html: Wrapped paragraph in <p>.  Mention some programs we
 	provide.
 	(java.nio, javax.naming, javax.transaction, java.text): Updated.
