--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-11-04  Anthony Green  <green@penalty>
+
+	* status.html: Fix xscale reference.  Add ARM.
+
 2002-11-03  Tom Tromey  <tromey@redhat.com>
 
 	* status.html: Use <code>.
