--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-11-09  Tom Tromey  <tromey@redhat.com>
+
+	* libgcj-classpath-compare.html: Rebuilt.
+
 2002-11-04  Anthony Green  <green@penalty>
 
 	* status.html: Fix xscale reference.  Add ARM.
