* thanks.html: Remove this file; its contents been merged into the 	main list of contributors.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-11-10  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* thanks.html: Remove this file; its contents been merged into the
+	main list of contributors.
+
 2002-11-09  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
