* scripts/gen-classpath-compare: Quote table border width; 	required for validation.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-11-10  Tom Tromey  <tromey@redhat.com>
+
+	* scripts/gen-classpath-compare: Quote table border width;
+	required for validation.
+
 2002-11-10  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* thanks.html: Remove this file; its contents been merged into the
