--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,7 @@
 2002-11-10  Tom Tromey  <tromey@redhat.com>
 
+	* scripts/gen-classpath-compare: Moved to bin/ directory.
+
 	* scripts/gen-classpath-compare: Quote table border width;
 	required for validation.
 
