* index.html: Use <h2> instead of tricky tables to handle layout. 	Minor markup tweaks.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-11-10  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* index.html: Use <h2> instead of tricky tables to handle layout.
+	Minor markup tweaks.
+
 2002-11-10  Tom Tromey  <tromey@redhat.com>
 
 	* scripts/gen-classpath-compare: Moved to bin/ directory.
