* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-11-10  Tom Tromey  <tromey@redhat.com>
+
+	* libgcj-classpath-compare.html: Rebuilt.
+
 2002-11-10  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* index.html: Use <h2> instead of tricky tables to handle layout.
