--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,3 +1,9 @@
+2002-11-11  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* thanks.html: Remove this files.
+	* index.html: Remove link to thanks.html; add link to GCC main page.
+	* status.html: Detto.
+	
 2002-07-15  Phil Edwards  <pme@gcc.gnu.org>
 
 	* index.html:  Add "#download" anchor.
