* index.html: Remove navigation, which is now handled by the 	global style. 	* status.html: Ditto.

--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,8 +1,14 @@
+2002-11-12  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* index.html: Remove navigation, which is now handled by the
+	global style.
+	* status.html: Ditto.
+	
 2002-11-11  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* thanks.html: Remove this files.
 	* index.html: Remove link to thanks.html; add link to GCC main page.
-	* status.html: Detto.
+	* status.html: Ditto.
 	
 2002-07-15  Phil Edwards  <pme@gcc.gnu.org>
 
