* status.html: Avoid referring to "current release".  Use GCC 	instead of gcc to denote the project.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-11-21  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* status.html: Avoid referring to "current release".  Use GCC
+	instead of gcc to denote the project.
+
 2002-11-17  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
