* test.html: Remove this file; its contents has been merged into the 	installations instructions.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-11-23  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* test.html: Remove this file; its contents has been merged into the
+	installations instructions.
+
 2002-11-21  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* status.html: Avoid referring to "current release".  Use GCC
