* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-11-24  Tom Tromey  <tromey@redhat.com>
+
+	* libgcj-classpath-compare.html: Rebuilt.
+
 2002-11-23  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* test.html: Remove this file; its contents has been merged into the
