* index.html: Mention rhug. 	* done.html: Mention rhug, WebMiel.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,8 @@
 2002-12-02  Tom Tromey  <tromey@redhat.com>
 
+	* index.html: Mention rhug.
+	* done.html: Mention rhug, WebMiel.
+
 	* libgcj-classpath-compare.html: Rebuilt.
 
 2002-11-24  Tom Tromey  <tromey@redhat.com>
