--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-12-16  Tom Tromey  <tromey@redhat.com>
+
+	* gcj-3.3-status.html: New file.
+
 2002-12-02  Tom Tromey  <tromey@redhat.com>
 
 	* index.html: Mention rhug.
