* gcj-3.3-status.html: Updated platform owners.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-12-19  Tom Tromey  <tromey@redhat.com>
+
+	* gcj-3.3-status.html: Updated platform owners.
+
 2002-12-17  Tom Tromey  <tromey@redhat.com>
 
 	* gcj-3.3-status.html: Don't mention gcj 3.1.
