* gcj-3.3-status.html: Anthony will handle xscale-elf. 	Added links to project list.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-12-20  Tom Tromey  <tromey@redhat.com>
+
+	* gcj-3.3-status.html: Anthony will handle xscale-elf.
+	Added links to project list.
+
 2002-12-19  Tom Tromey  <tromey@redhat.com>
 
 	* gcj-3.3-status.html: Updated platform owners.
