--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-12-28  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* index.html: Add two news items.
+
 2002-12-20  Tom Tromey  <tromey@redhat.com>
 
 	* gcj-3.3-status.html: Anthony will handle xscale-elf.
