* gcj-3.3-status.html: Andreas Tobler handles Darwin; Jeff Sturm 	handles Solaris 8 and alpha linux.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2003-01-03  Tom Tromey  <tromey@redhat.com>
+
+	* gcj-3.3-status.html: Andreas Tobler handles Darwin; Jeff Sturm
+	handles Solaris 8 and alpha linux.
+
 2003-01-01  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
