* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-04  Tom Tromey  <tromey@redhat.com>
+
+	* libgcj-classpath-compare.html: Rebuilt.
+
 2003-01-03  Tom Tromey  <tromey@redhat.com>
 
 	* gcj-3.3-status.html: Andreas Tobler handles Darwin; Jeff Sturm
