* index.html: Add news item.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-05  Jeff Sturm  <jsturm@one-point.com>
+
+	* index.html: Add news item.
+
 2003-01-04  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
