* gcj-3.3-status.html: Status for Crypto, rhug.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-13  Tom Tromey  <tromey@redhat.com>
+
+	* gcj-3.3-status.html: Status for Crypto, rhug.
+
 2003-01-05  Jeff Sturm  <jsturm@one-point.com>
 
 	* index.html: Add news item.
