* gcj-3.3-status.html: Updated status for rhug, x86, Jacks.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-29  Tom Tromey  <tromey@redhat.com>
+
+	* gcj-3.3-status.html: Updated status for rhug, x86, Jacks.
+
 2003-01-13  Tom Tromey  <tromey@redhat.com>
 
 	* gcj-3.3-status.html: Status for Crypto, rhug.
