--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2003-02-07  Tom Tromey  <tromey@redhat.com>
+
+	* gcj-3.3-status.html (Mauve): Updated status.
+
 2003-01-29  Tom Tromey  <tromey@redhat.com>
 
 	* gcj-3.3-status.html: Updated status for rhug, x86, Jacks.
