* status.html: Updated status of Irix 6.5.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2003-02-11  Tom Tromey  <tromey@redhat.com>
+
+	* status.html: Updated status of Irix 6.5.
+
 2003-02-07  Tom Tromey  <tromey@redhat.com>
 
 	* gcj-3.3-status.html (Mauve): Updated status.
