--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2003-02-19  Tom Tromey  <tromey@redhat.com>
+
+	* faq.html (1.7): Use correct name for shared library.
+
 2003-02-11  Tom Tromey  <tromey@redhat.com>
 
 	* status.html: Updated status of Irix 6.5.
