* faq.html (1.7): Interpreter works on several platforms.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,7 @@
 2003-02-19  Tom Tromey  <tromey@redhat.com>
 
+	* faq.html (1.7): Interpreter works on several platforms.
+
 	* faq.html (1.7): Use correct name for shared library.
 
 2003-02-11  Tom Tromey  <tromey@redhat.com>
