--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,8 @@
 2003-02-19  Tom Tromey  <tromey@redhat.com>
 
+	* index.html: Mention GNU Crypto.
+	* status.html: Link to japi page.  Mention GNU Crypto.
+
 	* faq.html (1.7): Interpreter works on several platforms.
 
 	* faq.html (1.7): Use correct name for shared library.
