* gcj-3.1-status.html, gcj-3.3-status.html: Moved to respective 	release directories.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2003-02-20  Tom Tromey  <tromey@redhat.com>
+
+	* gcj-3.1-status.html, gcj-3.3-status.html: Moved to respective
+	release directories.
+
 2003-02-19  Tom Tromey  <tromey@redhat.com>
 
 	* index.html: Mention GNU Crypto.
