* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,7 @@
 2003-02-20  Tom Tromey  <tromey@redhat.com>
 
+	* libgcj-classpath-compare.html: Rebuilt.
+
 	* gcj-3.1-status.html, gcj-3.3-status.html: Moved to respective
 	release directories.
 
