* contrib.html: Refer to GCC Installation Notes for further 	information on testing.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2003-03-21  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* contrib.html: Refer to GCC Installation Notes for further
+	information on testing.
+
 2003-03-12  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
