--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2003-03-23  Tom Tromey  <tromey@redhat.com>
+
+	* libgcj-classpath-compare.html: Rebuilt.
+
 2003-03-21  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* contrib.html: Refer to GCC Installation Notes for further
