* done.html: Remove broken links to 	http://www.mmsi.com/modular/trucks/index.html and 	http://www.pima.net/standards/it10/PIMA15740/ .

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,9 @@
+2003-04-02  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* done.html: Remove broken links to
+	http://www.mmsi.com/modular/trucks/index.html and
+	http://www.pima.net/standards/it10/PIMA15740/ .
+
 2003-04-01  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
