* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2003-04-05  Tom Tromey  <tromey@redhat.com>
+
+	* libgcj-classpath-compare.html: Rebuilt.
+
 2003-04-02  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* done.html: Remove broken links to
