* libgcj2.html: Remove broken (and obsolete) download reference. 	* old-news.html: Remove broken link to test.html.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2003-04-17  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* libgcj2.html: Remove broken (and obsolete) download reference.
+	* old-news.html: Remove broken link to test.html.
+
 2003-04-12  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
