* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2003-04-20  Tom Tromey  <tromey@redhat.com>
+
+	* libgcj-classpath-compare.html: Rebuilt.
+
 2003-04-17  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* libgcj2.html: Remove broken (and obsolete) download reference.
