--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2003-04-28  Michael Koch  <konqueror@gmx.de>.
+
+	* status.html: Clarified status of java.nio.
+
 2003-04-27  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
