* faq-portugese.html: Remove. 	* faq.html: Remove link to faq-portugese.html.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2003-04-30  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* faq-portugese.html: Remove.
+	* faq.html: Remove link to faq-portugese.html.
+
 2003-04-29  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
