* status.html: Remove. 	* index.html: Adjust accordingly.

--- a/htdocs/libstdc++/ChangeLog
+++ b/htdocs/libstdc++/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-20  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* status.html: Remove.
+	* index.html: Adjust accordingly.
+
 2002-11-12  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* index.html: Remove navigation, which is now handled by the
