* faq.html: Remove (soon) obsolete "How can I report a bug in 	libgcj?" as well as "Is libgcj part of GCC?".

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-20  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* faq.html: Remove (soon) obsolete "How can I report a bug in
+	libgcj?" as well as "Is libgcj part of GCC?".
+
 2003-05-10  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
@@ -22,18 +27,15 @@
 
 	* libgcj-classpath-compare.html: Rebuilt.
 
-<<<<<<< ChangeLog
 2003-04-30  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
 
-=======
 2003-04-30  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* faq-portugese.html: Remove.
 	* faq.html: Remove link to faq-portugese.html.
 
->>>>>>> 1.344
 2003-04-29  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
