* old-news.html: Fix spelling of GCC and GNATS.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-23  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* old-news.html: Fix spelling of GCC and GNATS.
+
 2003-05-20  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* faq.html: Remove (soon) obsolete "How can I report a bug in
