--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-16  Tom Tromey  <tromey@redhat.com>
+
+	* libgcj-classpath-compare.html: Rebuilt.
+
 2003-05-23  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* old-news.html: Fix spelling of GCC and GNATS.
