--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2003-07-12  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* contrib.html: Add a reference to the main contribute.html page
+	and remove a redundant section on copyright assignment.
+
 2003-07-10  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
