--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-14  Tom Tromey  <tromey@redhat.com>
+
+	* libgcj-classpath-compare.html: Rebuilt.
+
 2003-07-12  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* contrib.html: Add a reference to the main contribute.html page
