* index.html: Added news item for 3.3 release.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,7 @@
 2003-07-18  Tom Tromey  <tromey@redhat.com>
 
+	* index.html: Added news item for 3.3 release.
+
 	* libgcj-classpath-compare.html: Rebuilt.
 
 2003-07-17  Tom Tromey  <tromey@redhat.com>
