--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-19  Tom Tromey  <tromey@redhat.com>
+
+	* libgcj-classpath-compare.html: Rebuilt.
+
 2003-07-18  Tom Tromey  <tromey@redhat.com>
 
 	* index.html: Added news item for 3.3 release.
