* contrib.html: Remove the "Checkins and Gnats" section which 	is redundant and partially obsolete.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2003-07-26  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* contrib.html: Remove the "Checkins and Gnats" section which 
+	is redundant and partially obsolete.
+
 2003-07-26  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
