2003-07-26  Erik Poupaert  <erik.poupaert@skynet.be>
	* done.html: Link to freestyler.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-26  Erik Poupaert  <erik.poupaert@skynet.be>
+
+	* done.html: Link to freestyler.
+
 2003-07-26  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* contrib.html: Remove the "Checkins and Gnats" section which 
