--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-28  Tom Tromey  <tromey@redhat.com>
+
+	* libgcj-classpath-compare.html: Rebuilt.
+
 2003-07-26  Erik Poupaert  <erik.poupaert@skynet.be>
 
 	* done.html: Link to freestyler.
