* index.html: Announce gcjwebplugin.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,7 @@
 2003-07-28  Tom Tromey  <tromey@redhat.com>
 
+	* index.html: Announce gcjwebplugin.
+
 	* libgcj-classpath-compare.html: Rebuilt.
 
 2003-07-26  Erik Poupaert  <erik.poupaert@skynet.be>
