* index.html: Updated URL.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,7 @@
 2003-07-28  Tom Tromey  <tromey@redhat.com>
 
+	* index.html: Updated URL.
+
 	* index.html: Announce gcjwebplugin.
 
 	* libgcj-classpath-compare.html: Rebuilt.
