* index.html: Mention Darwin and tree-ssa. 	Moved old news... 	* old-news.html: ... here.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,9 @@
+2003-07-31  Tom Tromey  <tromey@redhat.com>
+
+	* index.html: Mention Darwin and tree-ssa.
+	Moved old news...
+	* old-news.html: ... here.
+
 2003-07-29  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
