* old-news.html: Moved <table> to correct place. 	* index.html: Fixed typo in URL.  Use GCJ instead of gcj.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2003-08-01  Tom Tromey  <tromey@redhat.com>
+
+	* old-news.html: Moved <table> to correct place.
+	* index.html: Fixed typo in URL.  Use GCJ instead of gcj.
+
 2003-07-31  Tom Tromey  <tromey@redhat.com>
 
 	* index.html: Mention Darwin and tree-ssa.
