* index.html: Mention eclipse.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-02  Tom Tromey  <tromey@redhat.com>
+
+	* index.html: Mention eclipse.
+
 2003-08-01  Tom Tromey  <tromey@redhat.com>
 
 	* old-news.html: Moved <table> to correct place.
