Add new news items.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-04  Anthony Green  <green@redhat.com>
+
+	* index.html: Mention Fast Free Eclipse Prize, and Naoko.
+
 2003-08-02  Tom Tromey  <tromey@redhat.com>
 
 	* index.html: Mention eclipse.
