--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-06  Tom Tromey  <tromey@redhat.com>
+
+	* libgcj-classpath-compare.html: Rebuilt.
+
 2003-08-04  Anthony Green  <green@redhat.com>
 
 	* index.html: Mention Fast Free Eclipse Prize, and Naoko.
