* status.html: Link to jdk14-libgcj.html. 	* jdk14-libgcj.html: New file. 	* 1x1.gif: New file. 	* japi.css: New file.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,10 @@
 2003-08-07  Tom Tromey  <tromey@redhat.com>
 
+	* status.html: Link to jdk14-libgcj.html.
+	* jdk14-libgcj.html: New file.
+	* 1x1.gif: New file.
+	* japi.css: New file.
+
 	* libgcj-classpath-compare.html: Rebuilt.
 
 2003-08-06  Tom Tromey  <tromey@redhat.com>
