* 1x1.png, japi.css, jdk14-libgcj.html: Removed. 	* status.html: Link to main japi page again.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2003-08-19  Tom Tromey  <tromey@redhat.com>
+
+	* 1x1.png, japi.css, jdk14-libgcj.html: Removed.
+	* status.html: Link to main japi page again.
+
 2003-08-17  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
