--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-22  Tom Tromey  <tromey@redhat.com>
+
+	* libgcj-classpath-compare.html: Rebuilt.
+
 2003-08-19  Tom Tromey  <tromey@redhat.com>
 
 	* 1x1.png, japi.css, jdk14-libgcj.html: Removed.
