* index.html: Add an anchor for the News section. 	Fix URLs added 2003-08-04.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2003-08-28  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* index.html: Add an anchor for the News section.
+	Fix URLs added 2003-08-04.
+
 2003-08-27  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
