--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-30  Tom Tromey  <tromey@redhat.com>
+
+	* libgcj-classpath-compare.html: Rebuilt.
+
 2003-08-28  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	* index.html: Add an anchor for the News section.
