Clean up "done with GCJ" entries.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,6 +1,6 @@
 2003-10-08  Bryce McKinlay  <bryce@mckinlay.net.nz>
 
-	* done.html: Add iRATE radio.
+	* done.html: Add iRATE radio. Clean up other entries.
 
 2003-10-07  Tom Tromey  <tromey@redhat.com>
 
