--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2003-10-09  Tom Tromey  <tromey@redhat.com>
+
+	* libgcj-classpath-compare.html: Rebuilt.
+
 2003-10-08  Bryce McKinlay  <bryce@mckinlay.net.nz>
 
 	* done.html: Add iRATE radio. Clean up other entries.
