--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-07  Tom Tromey  <tromey@redhat.com>
+
+	* libgcj-classpath-compare.html: Rebuilt.
+
 2003-10-31  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	* index.html: Shorten <title>.
