* contrib.html: Consolidate with main GCC patch submission 	information and remove lots of duplicate information. 	Minor (markup) tweaks.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,9 @@
+2003-11-16  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* contrib.html: Consolidate with main GCC patch submission
+	information and remove lots of duplicate information.
+	Minor (markup) tweaks.
+
 2003-11-16  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
