--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-18  Tom Tromey  <tromey@redhat.com>
+
+	* libgcj-classpath-compare.html: Rebuilt.
+
 2003-11-16  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	* contrib.html: Consolidate with main GCC patch submission
