* done.html: Rework the introduction a bit. 	Fix broken link to Tamanoir.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-29  Gerald Pfeifer  <gp@suse.de>
+
+	* done.html: Rework the introduction a bit. 
+	Fix broken link to Tamanoir.
+
 2003-12-29  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
