--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-31  Tom Tromey  <tromey@redhat.com>
+
+	* libgcj-classpath-compare.html: Rebuilt.
+
 2003-12-29  Gerald Pfeifer  <gp@suse.de>
 
 	* done.html: Rework the introduction a bit. 
