* done.html: HTML correctness fix.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,7 @@
 2004-01-08  Tom Tromey  <tromey@redhat.com>
 
+	* done.html: HTML correctness fix.
+
 	* done.html: Added Rimfaxe, JGachine, and pdftk.
 
 	* libgcj-classpath-compare.html: Rebuilt.
