--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-09  Tom Tromey  <tromey@redhat.com>
+
+	* libgcj-classpath-compare.html: Rebuilt.
+
 2004-01-08  Tom Tromey  <tromey@redhat.com>
 
 	* done.html: HTML correctness fix.
