* index.html: Added a couple news entries.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-23  Tom Tromey  <tromey@redhat.com>
+
+	* index.html: Added a couple news entries.
+
 2004-01-22  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
