* index.html: HTML fix.  Also, moved items from 2002... 	* old-news.html: ... here.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,8 @@
 2004-01-23  Tom Tromey  <tromey@redhat.com>
 
+	* index.html: HTML fix.  Also, moved items from 2002...
+	* old-news.html: ... here.
+
 	* index.html: Added a couple news entries.
 
 2004-01-22  Tom Tromey  <tromey@redhat.com>
