* swingshot.png: New file. 	* index.html: Link to screen shot.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,8 @@
 2004-01-23  Tom Tromey  <tromey@redhat.com>
 
+	* swingshot.png: New file.
+	* index.html: Link to screen shot.
+
 	* index.html: HTML fix.  Also, moved items from 2002...
 	* old-news.html: ... here.
 
