* index.html: Link to news.html. 	* old-news.html: Renamed... 	* news.html: ... here.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-24  Tom Tromey  <tromey@redhat.com>
+
+	* index.html: Link to news.html.
+	* old-news.html: Renamed...
+	* news.html: ... here.
+
 2004-01-23  Tom Tromey  <tromey@redhat.com>
 
 	* swingshot.png: New file.
