--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,7 @@
 2004-03-09  Tom Tromey  <tromey@redhat.com>
 
+	* index.html: Mention java.util.regex.
+
 	* libgcj-classpath-compare.html: Rebuilt.
 
 2004-03-08  Tom Tromey  <tromey@redhat.com>
