--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-10  Tom Tromey  <tromey@redhat.com>
+
+	* libgcj-classpath-compare.html: Rebuilt.
+
 2004-03-09  Tom Tromey  <tromey@redhat.com>
 
 	* index.html: Mention java.util.regex.
