* index.html: Link to Jessie.  Mention `major' release.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-19  Tom Tromey  <tromey@redhat.com>
+
+	* index.html: Link to Jessie.  Mention `major' release.
+
 2004-03-17  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
