* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-27  Tom Tromey  <tromey@redhat.com>
+
+	* libgcj-classpath-compare.html: Rebuilt.
+
 2004-03-24  Tom Tromey  <tromey@redhat.com>
 
 	* status.html: Updated japi link.
