* done.html (pdftk): Fix URL.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-11  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* done.html (pdftk): Fix URL.
+
 2004-04-03  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
