--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,7 @@
 2004-04-22  Tom Tromey  <tromey@redhat.com>
 
+	* status.html: Updated status of java.util.regex.
+
 	* libgcj-classpath-compare.html: Rebuilt.
 
 2004-04-20  Tom Tromey  <tromey@redhat.com>
