--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-22  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* news.html (Cryptix): Remove broken link to Cryptix site. 
+
 2004-04-22  Tom Tromey  <tromey@redhat.com>
 
 	* status.html: Updated status of java.util.regex.
