2004-07-16  Bryce McKinlay  <mckinlay@redhat.com>
       * index.html: Add slime volleyball news item.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,9 @@
 2004-07-16  Bryce McKinlay  <mckinlay@redhat.com>
 
+	* index.html: Add slime volleyball news item.
+
+2004-07-16  Bryce McKinlay  <mckinlay@redhat.com>
+
 	* news.html: Move old news here.
 	* index.html: New news item.
 
