2004-07-19  Bryce McKinlay  <mckinlay@redhat.com>
	* index.html: Replace '&' with 'and', 'A' with 'a', 'HREF' with
	'href'. XHTML 1.0 fixes.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,6 +1,7 @@
 2004-07-19  Bryce McKinlay  <mckinlay@redhat.com>
 
-	* index.html: Replace '&' with 'and'.
+	* index.html: Replace '&' with 'and', 'A' with 'a', 'HREF' with
+	'href'. XHTML 1.0 fixes.
 
 2004-07-19  Tom Tromey  <tromey@redhat.com>
 
