* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-21  Tom Tromey  <tromey@redhat.com>
+
+	* libgcj-classpath-compare.html: Rebuilt.
+
 2004-07-19  Bryce McKinlay  <mckinlay@redhat.com>
 
 	* index.html: Replace '&' with 'and', 'A' with 'a', 'HREF' with
