* expected/java.net.URL.diff: New file.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,7 @@
 2004-09-27  Tom Tromey  <tromey@redhat.com>
 
+	* expected/java.net.URL.diff: New file.
+
 	* libgcj-classpath-compare.html: Rebuilt.
 
 	* libgcj-classpath-compare.html: Rebuilt.
